manifests/regions/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $namespace
  labels:
    istio-injection: enabled
    compliance.region: $region
    security.policy: zero-trust
spec: {}
